add logout to navbar

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="TripTracker"
       content="Web site created using create-react-app"
     />
+    <meta name='description' content="Trip Tracker compiles exchange rate information for 178 foreign
+    currencies, that are used in 249 different countries. This information can then be used to plan
+    trips to those same countries and effectively make informed decisions about advantageous times
+    to exchange currencies." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
