--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="TripTracker"
-      content="Web site created using create-react-app"
+      content="Trip Tracker site was built using create-react-app"
     />
     <meta name='description' content="Trip Tracker compiles exchange rate information for 178 foreign
     currencies, that are used in 249 different countries. This information can then be used to plan
